manifests/overlays/melbourne/letsencrypt-staging/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: shared-app-route
  namespace: demo-app
spec:
  parentRefs:
    - name: shared-app-gw
      namespace: api-gateway
  hostnames:
    - greenblue.sandbox3573.opentlc.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: blue-app
          port: 8080
